package Pizza;

import Pizza.Pizza;

public class PizzaCheese extends Pizza {
	
	public PizzaCheese() {
		this.name = "PizzaCheese";
	}
	
}
