package Pizza;
public class PizzaCheeseStyleBrest extends Pizza{
	
	public PizzaCheeseStyleBrest() {
		this.name = "Pizza with Brest style sauce and cheese";
		this.garnitures.add(" Parmigiano reggiano");
	}
	

}
