package Pizza;

public class PizzaGrecque extends Pizza{
	public PizzaGrecque() {
		this.name = "PizzaGrecque";
	}
}
