package Pizza;
public class PizzaGrecqueStyleBrest extends Pizza{
	public PizzaGrecqueStyleBrest() {
		this.name = "PizzaGrecqueStyleBrest";
	}
}
