package Pizza;
/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaGrecqueStyleStrasbourg extends Pizza {
	public PizzaGrecqueStyleStrasbourg() {
		this.name = "PizzaGrecqueStyleStrasbourg";
	}
}
