package Pizza;

public class PizzaPoivron extends Pizza{
	public PizzaPoivron() {
		this.name = "PizzaGrecque";
	}
}
