package Pizza;
/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaPoivronStyleBrest extends Pizza {
	public PizzaPoivronStyleBrest() {
		this.name = "PizzaPoivronStyleBrest";
	}
}
