package Pizza;
public class PizzaPoivronStyleStrasbourg extends Pizza{
	
	public PizzaPoivronStyleStrasbourg() {
		this.name = "PizzaPoivronStyleStrasbourg";
	}
	
}
